# Wismut

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dependencies.lua  GenerateProjectFiles.bat  LICENSE  README.md  Wismut.sln.DotSettings  premake5.lua  wismut-cli.bat
Engine/Sandbox/: CMakeLists.txt  CMakePresets.json
Engine/Sandbox/Config/Android/: AndroidManifest.xml
Engine/Sandbox/Platform/Android/: CMakeLists.txt  settings.gradle
Engine/Sandbox/Platform/Android/app/src/main/: AndroidManifest.xml
Engine/Sandbox/Platform/Linux/: CMakeLists.txt
Engine/Sandbox/Platform/Windows/: CMakeLists.txt
Engine/Sandbox/Source/: Game.cpp
Engine/Source/Launcher/: CMakeLists.txt  premake5.lua
Engine/Source/Launcher/Private/: LauncherApplication.cpp
Engine/Source/Launcher/Source/: LauncherApplication.cpp
Engine/Source/Player/: CMakeLists.txt
Engine/Source/Player/Game/: CMakeLists.txt  SandboxApp.cpp
Engine/Source/Player/Platform/Android/: CMakeLists.txt
Engine/Source/Player/Platform/Android/app/: build.gradle
Engine/Source/Player/Platform/Linux/: CMakeLists.txt
Engine/Source/Player/Platform/Windows/: CMakeLists.txt
Engine/Source/Runtime/: CMakeLists.txt  Core.h  EngineSettigns.h  premake5.lua
Engine/Source/Runtime/Application/: Application.cpp  Application.h  Application.hpp  Entry.h  INativeApplication.hpp  Input.cpp  Input.h  KeyCodes.h  Window.hpp
Engine/Source/Runtime/Application/Events/: Event.h  KeyEvent.h  MouseEvents.h  WindowEvents.h
Engine/Source/Runtime/Application/Linux/: LinuxApplication.cpp  LinuxApplication.hpp  LinuxWindow.cpp  LinuxWindow.hpp
Engine/Source/Runtime/Application/Private/GenericPlatform/: GenericApplication.cpp
Engine/Source/Runtime/Application/Private/Windows/: WindowsApplication.cpp
Engine/Source/Runtime/Application/Public/GenericPlatform/: GenericApplication.h  GenericWindow.h
Engine/Source/Runtime/Application/Public/Windows/: WindowsApplication.h  WindowsWindow.h
Engine/Source/Runtime/Application/Windows/: WindowsApplication.cpp  WindowsApplication.hpp  WindowsWindow.cpp  WindowsWindow.hpp
Engine/Source/Runtime/Core/: Assertion.h  CommonDefines.h  CoreTypes.h  Defines.hpp  Entry.h  Entry.hpp  EntryPoint.h  PreprocessorHelpers.h  Time.h
Engine/Source/Runtime/Core/Concepts/: CIntegral.h
Engine/Source/Runtime/Core/Containers/: RangedForPtrIterator.h  StaticArray.h  UntrackedContainers.h
Engine/Source/Runtime/Core/Logger/: ILoggerSink.h  LogEntry.h  Logger.cpp  Logger.h
Engine/Source/Runtime/Core/Logger/Sinks/: ConsoleSink.cpp  ConsoleSink.h
Engine/Source/Runtime/Core/Math/: GLMWrapper.h  Math.h  MathUtils.h
Engine/Source/Runtime/Core/Memory/: DefaultAllocator.cpp  DefaultAllocator.h  DefaultMalloc.cpp  DefaultMalloc.h  IAllocator.h  IMalloc.h  Memory.cpp  Memory.h  MemoryBase.h  MemoryTracker.cpp  MemoryTracker.h  MemoryTypes.h  SystemAllocator.h  SystemMalloc.cpp  SystemMalloc.h  UntrackedAllocator.h
Engine/Source/Runtime/Core/Public/: Core.h
Engine/Source/Runtime/Core/Public/GenericPlatform/: GenericPlatform.h
Engine/Source/Runtime/Core/Public/Platform/: Platform.h
Engine/Source/Runtime/Core/Public/Windows/: WindowsPlatform.h
Engine/Source/Runtime/Core/Templates/: AlignTemplates.h  CommonTemplates.h  Concepts.h  MemoryTemplates.h  TypeTraits.h
Engine/Source/Runtime/Core/Utils/: CompilerMacros.h  EnumUtils.h  PreprocessorHelpers.h  StringUtils.cpp  StringUtils.h
Engine/Source/Runtime/Launch/Public/: EntryPoint.h
Engine/Source/Runtime/Platform/: IPlatform.h  IPlatformApplication.h  IPlatformApplication.hpp  IPlatformWindow.h  IPlatformWindow.hpp  Platform.h  Platform.hpp
Engine/Source/Runtime/Platform/Android/: AndroidApplication.cpp  AndroidApplication.h  AndroidMemory.cpp  AndroidOpenGL.cpp  AndroidPlatform.cpp  AndroidPlatform.h  AndroidWindow.cpp  AndroidWindow.h
Engine/Source/Runtime/Platform/GenericPlatform/: GenericPlatformConsole.cpp  GenericPlatformConsole.h  GenericPlatformMemory.cpp  GenericPlatformMemory.h  GenericPlatformTime.cpp  GenericPlatformTime.h
Engine/Source/Runtime/Platform/Linux/: LinuxApplication.cpp  LinuxApplication.h  LinuxApplication.hpp  LinuxConsole.cpp  LinuxConsole.h  LinuxMemory.cpp  LinuxMemory.h  LinuxOpenGL.cpp  LinuxPlatform.cpp  LinuxPlatform.h  LinuxTime.cpp  LinuxTime.h  LinuxWindow.cpp  LinuxWindow.h  LinuxWindow.hpp  X11.h  X11.hpp
Engine/Source/Runtime/Platform/Windows/: WindowsApplication.cpp  WindowsApplication.h  WindowsApplication.hpp  WindowsConsole.cpp  WindowsConsole.h  WindowsMemory.cpp  WindowsMemory.h  WindowsOpenGL.cpp  WindowsPlatform.cpp  WindowsPlatform.h  WindowsTime.cpp  WindowsTime.h  WindowsWindow.cpp  WindowsWindow.h  WindowsWindow.hpp
Engine/Source/Runtime/Renderer/: IRenderBackend.h  IRenderViewport.h  RenderConfig.h  Renderer.cpp  Renderer.h  Vertex.h
Engine/Source/Runtime/Renderer/OpenGL/: GLRenderBackend.cpp  GLRenderBackend.h  GLUtils.h  GLViewport.cpp  GLViewport.h  GlUtils.cpp  OpenGLPlatform.h
Engine/Source/Sandbox/: CMakeLists.txt
Engine/Source/Sandbox/Source/: SandboxApp.cpp
Engine/Source/Tests/: CMakeLists.txt  MemoryTests.cpp
Engine/Source/Tests/Source/: MemoryTests.cpp
Engine/Source/Tests/Source/Containers/: StaticArrayTest.cpp
Engine/Templates/Default/: CMakeLists.txt
Engine/Templates/Default/Config/Android/: AndroidManifest.xml
Engine/Templates/Default/Platform/Android/: CMakeLists.txt
Engine/Templates/Default/Platform/Android/app/: build.gradle
Engine/Templates/Default/Platform/Android/app/src/main/: AndroidManifest.xml
Engine/Templates/Default/Platform/Android/app/src/main/cpp/: AndroidMain.cpp
Engine/Templates/Default/Platform/Android/gradle/wrapper/: gradle-wrapper.properties
Engine/Templates/Default/Platform/Linux/: CMakeLists.txt
Engine/Templates/Default/Source/: Game.cpp
Engine/Tools/CLI/: CMakeLists.txt
Engine/Tools/CLI/Source/: CLI.cpp  CommandRegistry.cpp  CommandRegistry.h
Engine/Tools/CLI/Source/Commands/: NewProject.cpp  NewProject.h
Sandbox/: CMakeLists.txt  SandboxApp.cpp  premake5.lua
(+114 files in other folders)
