set(TARGET_NAME "Launcher")

file(GLOB_RECURSE SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

add_executable(${TARGET_NAME} ${SOURCE_FILES} ${HEADER_FILES})
target_link_libraries(${TARGET_NAME} Runtime)

file(GLOB PUBLIC_DIRS LIST_DIRECTORIES TRUE ${CMAKE_CURRENT_SOURCE_DIR}/*/Public)
file(GLOB INTERNAL_DIRS LIST_DIRECTORIES TRUE ${CMAKE_CURRENT_SOURCE_DIR}/*/Internal)

target_include_directories(${TARGET_NAME} PUBLIC ${PUBLIC_DIRS})
target_include_directories(${TARGET_NAME} PRIVATE ${INTERNAL_DIRS})

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR})
